Fix javadoc + surefire configuration for Java 9