@@ -296,28 +296,6 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
-                    <configuration>
-                        <reportFormat>brief</reportFormat>
-                        <useFile>false</useFile>
-                        <childDelegation>false</childDelegation>
-                        <includes>
-                            <include>**/*Test.java</include>
-                        </includes>
-                        <excludes>
-                            <exclude>**/PerformanceMemoryTest.java</exclude>
-                            <exclude>**/PerformanceTimingTest.java</exclude>
-                        </excludes>
-                        <systemPropertyVariables>
-                            <product.version>${project.version}</product.version>
-                            <log4j.configuration>log4j-xmlsec.xml</log4j.configuration>
-                            <!--<javax.xml.bind.JAXBContext>${xmlsec.jaxb.context.class}</javax.xml.bind.JAXBContext>-->
-                        </systemPropertyVariables>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>clirr-maven-plugin</artifactId>
                     <version>${clirr.version}</version>
@@ -369,9 +347,9 @@
             </properties>
         </profile>
         <profile>
-            <id>nodoclint</id>
+            <id>jdk18</id>
             <activation>
-                <jdk>[1.8,1.9]</jdk>
+                <jdk>1.8</jdk>
             </activation>
             <build>
                 <pluginManagement>
@@ -385,10 +363,78 @@
                                 </additionalJOptions>
                             </configuration>
                         </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.19.1</version>
+                            <configuration>
+                                <reportFormat>brief</reportFormat>
+                                <useFile>false</useFile>
+                                <childDelegation>false</childDelegation>
+                                <includes>
+                                    <include>**/*Test.java</include>
+                                </includes>
+                                <excludes>
+                                    <exclude>**/PerformanceMemoryTest.java</exclude>
+                                    <exclude>**/PerformanceTimingTest.java</exclude>
+                                </excludes>
+                                <systemPropertyVariables>
+                                    <product.version>${project.version}</product.version>
+                                    <log4j.configuration>log4j-xmlsec.xml</log4j.configuration>
+                                    <!--<javax.xml.bind.JAXBContext>${xmlsec.jaxb.context.class}</javax.xml.bind.JAXBContext>-->
+                                </systemPropertyVariables>
+                            </configuration>
+                        </plugin>
                     </plugins>
                 </pluginManagement>
             </build>
-        </profile>
+         </profile>
+         <profile>
+            <id>jdk19</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <configuration>
+                                <additionalJOptions>
+                                    <additionalJOption>-Xdoclint:none</additionalJOption>
+                                    <additionalJOption>--add-modules</additionalJOption>
+                                    <additionalJOption>java.xml.bind</additionalJOption>
+                                </additionalJOptions>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.19.1</version>
+                            <configuration>
+                                <reportFormat>brief</reportFormat>
+                                <useFile>false</useFile>
+                                <childDelegation>false</childDelegation>
+                                <includes>
+                                    <include>**/*Test.java</include>
+                                </includes>
+                                <excludes>
+                                    <exclude>**/PerformanceMemoryTest.java</exclude>
+                                    <exclude>**/PerformanceTimingTest.java</exclude>
+                                </excludes>
+                                <argLine>-Xmx2000m --add-modules java.xml.bind --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+                                <systemPropertyVariables>
+                                    <product.version>${project.version}</product.version>
+                                    <log4j.configuration>log4j-xmlsec.xml</log4j.configuration>
+                                    <!--<javax.xml.bind.JAXBContext>${xmlsec.jaxb.context.class}</javax.xml.bind.JAXBContext>-->
+                                </systemPropertyVariables>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+             </build>
+         </profile>
         <profile>
             <!-- Profile for testing with EclipseLink MOXy based JAXB implementation -->
             <id>eclipse.moxy</id>
